# IA-TRADING-BOT

./: .env.example  .gitignore  CLAUDE.md  IA-TRADING-ARRANCAR.command  PLAN_MAESTRO.md  PLAN_MAESTRO_V2.md  PROMPT_TRANSFORMACION_SP500.md  kalyx.html  pyproject.toml
.claude/: launch.json  settings.json
agencia-web-dental/: 00-brief.md  01-estrategia.md  02-naming.md  04-identidad-visual.md  README.md  bios-redes.md
backtest/: archetypes.py  confluence.py  cross_sectional.py  deciders.py  diagnostics.py  edge.py  engine.py  funding_edge.py  metrics.py  pairs.py  portfolio.py  positioning.py  quant_hypotheses.py  quant_matrix.py  report.py  run_backtest.py  run_confluence.py  run_cross_sectional.py  run_edge.py  run_factor_etf_proxy.py  run_full_matrix.py  run_funding_edge.py  run_leadlag.py  run_letwinners.py  run_ma_split.py  run_ma_sweep.py  run_portfolio.py  run_positioning.py  run_quant_hypotheses.py  run_quant_matrix.py  run_scan.py  run_seasonality_reversion.py  run_sentiment_regime.py  run_sp500_breadth_vix.py  run_sp500_drawdown_analysis.py  run_sp500_research.py  run_sp500_rsi_tsmom_combo.py  run_stocks.py  run_tsmom_split.py  run_xs_reversion_liquid.py  (+4 more)
config/: settings.yaml
docs/: GLOSARIO.md  HANDOFF_TESTNET.md  PAPER_TRADING_RSI2.md  SCOREBOARD_QUANT.md
marca-don-pirry-cafe/: 00-brief.md  01-estrategia.md  02-identidad-verbal.md  03-brief-ilustrador-logo.md  03-identidad-visual.md  03c-logo-direcciones-ia.md  03d-prompt-gemini-logo-papa.md  README.md
ops/: watchdog.sh
src/: main.py
tests/: test_config.py  test_main.py  test_models.py
(+117 files in other folders)
