[project]
name = "ia-trading"
version = "0.2.0"
description = "Bot cuantitativo S&P 500: investigación/backtest con protocolo anti-sobreajuste"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.2",
    "numpy",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "pyarrow>=17.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
